Refactor app blade to use vue bootstrap

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,6 +4,9 @@
 // Variables
 @import "variables";
 
+@import '~bootstrap';
+@import '~bootstrap-vue';
+
 .invalid-feedback {
     display: block;
 }
