--- a/resources/sass/components/_sidebar.scss
+++ b/resources/sass/components/_sidebar.scss
@@ -222,23 +222,21 @@
                 padding-right: 15px;
                 .nav-link {
                     background-color: #d209fa;
-                    @include filter-gradient(#d209fa, #4f81d4, horizontal);
-                    @include background-image(
-                        linear-gradient(left, #d209fa 1%, #4f81d4 100%)
-                    );
+                    // @include filter-gradient(#d209fa, #4f81d4, horizontal);
+                    // @include background-image(
+                    //     linear-gradient(left, #d209fa 1%, #4f81d4 100%)
+                    // );
                     color: $white;
                     text-align: center;
                     display: block;
                     font-weight: 500;
                     @include border-radius(4px);
-                    @include transition-duration(0.3s);
+                    // @include transition-duration(0.3s);
                     font-size: 14px;
                     &:hover {
                         background-color: #d209fa;
-                        @include filter-gradient(#d209fa, #4f81d4, horizontal);
-                        @include background-image(
-                            linear-gradient(left, #d209fa 1%, #4f81d4 100%)
-                        );
+                        // @include filter-gradient(#d209fa, #4f81d4, horizontal);
+                        // @include background-image(linear-gradient(left, #d209fa 1%, #4f81d4 100%));
                     }
                 }
                 &:hover {
