Add star mini css files

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,10 +8,19 @@
 // Variables
 @import "variables";
 
+// Mixins
+// @import "mixins/animation";
+@import "mixins/cards";
+
+// Core
+@import "misc";
+@import "typography";
+@import "utilities";
 
 // Components
 @import "components/navbar";
 @import "components/sidebar";
+@import "components/cards";
 
 .invalid-feedback {
     display: block;
