--- a/resources/sass/components/_sidebar.scss
+++ b/resources/sass/components/_sidebar.scss
@@ -28,7 +28,7 @@
         flex-wrap: nowrap;
         flex-direction: column;
         padding-top: 30px;
-        padding-bottom: 50px;
+        height: 100%;
 
         .nav-item {
             .collapse {
