Convert key in theme colors to string

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -59,15 +59,15 @@ $social-colors: (
   reddit: #ff4500
 );
 $theme-colors: (
-  primary: $blue,
-  secondary: $gray-300,
-  success: $green,
-  info: $purple,
-  warning: $orange,
-  danger: $red,
-  light: $gray-100,
-  dark: #424964,
-  teal: $teal,
+  "primary": $blue,
+  "secondary": $gray-300,
+  "success": $green,
+  "info": $purple,
+  "warning": $orange,
+  "danger": $red,
+  "light": $gray-100,
+  "dark": #424964,
+  "teal": $teal,
 );
 ////////// COLOR SYSTEM //////////
 
