Link stats card such as company to their own page

--- a/resources/sass/components/_cards.scss
+++ b/resources/sass/components/_cards.scss
@@ -35,6 +35,14 @@
     }
 }
 
+.card-link {
+    color: $body-color;
+
+    &:hover {
+        color: $body-color;
+    }
+}
+
 @each $color, $value in $theme-colors {
     .card-inverse-#{$color} {
         @include card-inverse-variant(
