Convert color map in variables to string

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -47,16 +47,16 @@ $colors: (
   gray-dark: #292b2c
 );
 $social-colors: (
-  twitter: #1da1f2,
-  facebook: #3b579d,
-  google: #dc4a38,
-  linkedin: #0177b4,
-  pinterest: #cc2127,
-  youtube: #e52d27,
-  github: #333333,
-  behance: #1769ff,
-  dribbble: #ea4c89,
-  reddit: #ff4500
+  "twitter": #1da1f2,
+  "facebook": #3b579d,
+  "google": #dc4a38,
+  "linkedin": #0177b4,
+  "pinterest": #cc2127,
+  "youtube": #e52d27,
+  "github": #333333,
+  "behance": #1769ff,
+  "dribbble": #ea4c89,
+  "reddit": #ff4500
 );
 $theme-colors: (
   "primary": $blue,
