Remove unknown sass function call in button

--- a/resources/sass/components/_buttons.scss
+++ b/resources/sass/components/_buttons.scss
@@ -161,7 +161,7 @@
 /*social buttons*/
 @each $color, $value in $social-colors {
     .btn-#{$color} {
-        @include social-button(social-color($color));
+        @include social-button($value);
     }
 }
 /* inverse buttons */
